--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<HTML lang="pl">
+<HEAD>
+    <title>Lanowe v2/skiny</title>
+    <link rel="stylesheet" href="everything.css">
+</HEAD>
+<BODY>
+    <img width="128px" height="128px" src="skin.png"></img>
+    <img width="128px" height="128px" src="default.png"></img>
+</BODY>
+</HTML>
