--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML lang="pl">
 <HEAD>
-    <title>Lanowe v2/skiny</title>
+    <title>Lanowe v2 - skiny</title>
     <link rel="stylesheet" href="everything.css">
 </HEAD>
 <BODY>
