--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <HTML lang="pl">
 <HEAD>
     <title>Lanowe v2 - skiny</title>
-    <link rel="stylesheet" href="everything.css">
+    <link rel="stylesheet" href="everything-skins.css">
 </HEAD>
 <BODY>
     <img width="128px" height="128px" src="skin.png"></img>
