--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <BODY>
     <img width="128px" height="128px" src="skin.png"></img>
     <img width="128px" height="128px" src="default.png"></img>
+    <img width="128px" height="128px" src="gentleman.png"></img>
 </BODY>
 </HTML>
