--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <img width="128px" height="128px" src="skin.png"></img>
     <img width="128px" height="128px" src="default.png"></img>
     <img width="128px" height="128px" src="gentleman.png"></img>
+    <img width="128px" height="128px" src="Dawar_YT.png"></img>
+    <img width="128px" height="128px" src="gentleman3.png"></img>
+    <img width="128px" height="128px" src="gentleman4.png"></img>
 </BODY>
 </HTML>
